--- a/package.json
+++ b/package.json
@@ -6,14 +6,23 @@
   "scripts": {
     "ts-node": "ts-node",
     "tsc": "tsc",
-    "clean:tsc": "rm tsconfig.tsbuildinfo"
+    "clean:tsc": "rm tsconfig.tsbuildinfo",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@swc/core": "^1.2.157",
+    "@swc/jest": "^0.2.20",
+    "@types/jest": "^27.4.1",
     "@types/node": "^17.0.21",
+    "@types/uuid": "^8.3.4",
+    "jest": "^27.5.1",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.2"
+  },
+  "dependencies": {
+    "uuid": "^8.3.2"
   }
 }
